--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -7,10 +7,10 @@
 * [六、看看精彩的世界——使用网络技术](#六看看精彩的世界使用网络技术)
 * [七、后台默默的劳动者——探究服务](#七后台默默的劳动者探究服务)
 * [八、Android特色开发——基于位置的服务](#八android特色开发基于位置的服务)
-* [九、最佳的UI体验——MaterialDesign实战](#九最佳的ui体验material-design实战)
+* [九、最佳的UI体验——MaterialDesign实战](#九最佳的UI体验material-design实战)
 * [十、继续进阶——你还应该掌握的高级技巧](#十其它的高级技巧)
-* [十一、进入实战——开发酷欧天气](#十一进入实战开发酷欧天气)
-* [十二、最后一步——将应用发布到360应用商店](#十二最后一步将应用发布到360应用商店)
+* [十一、进入实战——开发酷欧天气](#十一开发库酷欧天气)
+* [十二、最后一步——将应用发布到360应用商店](#十二应用发布)
 * [参考资料](#参考资料)
 <!-- GFM-TOC -->
 
@@ -1789,5 +1789,126 @@ Paracelable方式的实现原理是将一个完整的对象进行分解，而分
     
 对于manager.set()方法的参数的解释：
 
-- ELAPSED_REALTIME
+第一个参数为整形，指定AlarmManager的工作类型
 
+- ELAPSED_REALTIME表示让定时任务的触发时间从系统开机开始算起，但不会唤醒CPU。
+- ELAPSED_REALTIME_WAKEUP表示让定时任务的触发时间从系统开机开始算起，但会唤醒CPU。
+- RTC表示让定时任务的触发时间从1970年1月1日0点开始算起，但不会唤醒CPU。
+- RTC_WAKEUP表示让定时任务的触发时间从1970年1月1日0点开始算起，但会唤醒CPU。
+
+此外：
+
+- SystemClock.elapsedRealtime()方法可以获取到系统开机至今所经历时间的毫秒数。
+- System.currentTimeMillis()方法可以获取到1970年1月1日0点至今所经历时间的毫秒数。
+
+第二个参数，定时任务触发的时间，以毫秒为单位。
+
+- 如果第一个参数是ELAPSED_REALTIME或ELAPSED_REALTIME_WAKEUP，则这里传入开机至今的时间再加上延迟执行的时间。
+- 如果第一个参数使用的是RTC或RTC_WAKEUP，则这里传入1970年1月1日0点至今的时间再加上延迟执行的时间。
+
+第三个参数是一个PendingIntent，一般调用getService()方法或者getBroadcast()方法来获取一个能够执行服务或广播的PendingIntent。这样当定时任务被触发的时候，服务的onStartCommand()方法或广播接收器的onReceive()方法就可以得到执行。
+
+    public class LongRunningService extends Service {
+        
+        @Override
+        public IBinder onBind(Intent intent) {
+            return null;
+        }
+        
+        @Override
+        public int onStartCommand(Intent intent, int flags, int startId) {
+            new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    //在这里执行具体的逻辑操作
+                }
+            }).start();
+            AlarmManager manager = (AlarmManager) getSystemService(ALARM_SERVICE);
+            int anHour = 60 * 60 * 1000;
+            long triggerAtTime = SystemClock.elapsedRealtime() + anHour;
+            Intent i = new Intent(this, LongRunningService.class);
+            PendingIntent pi = PendingIntent.getService(this, 0, i, 0);
+            manager.set(AlarmManager.ELAPSED_REALTIME_WAKEUP, triggerAtTiem, pi);
+            return super.onStartCommand(intent, flags, startId);
+        }
+    }
+    
+注意：从Android 4.4系统开始，Alarm任务的触发时间将会变得不准确，有可能会延迟一段时间后任务才能执行。这是系统在耗电方面的优化，它会自动检测目前有多少Alarm任务存在，然后将触发时间相近的几个任务放在一起执行，这就可以大幅度减少CPU被唤醒的次数，从而有效延长电池的使用时间。
+
+使用setExact()方法替代set()方法，基本上可以保证任务准时执行。
+
+### Doze模式
+
+当用户的设备是Android 6.0或以上系统时，如果该设备未插接电源，处于静止状态（Android 7.0删除了这一条件），且屏幕关闭了一段时间后，就会进入到Doze模式。此时系统会对CPU、网络、Alarm等活动进行限制，从而延长了电池的使用寿命。
+
+系统不会一直处于Doze模式，会间歇性退出Doze模式一小段时间让应用去完成同步操作、Alarm任务等等。下图完整描述了Doze模式的工作过程。
+
+![image](http://o6lxzg30h.bkt.clouddn.com/doze.png)
+
+注意：在Doze模式下，Alarm任务将会变得不准时。调用AlarmManager的setAndAllowWhileIdle()或setExactAndAllowWhileIdle()方法就能让定时任务即使在Doze模式下也能正常执行。
+
+## 多窗口模式编程
+
+多窗口模式并不会改变活动原有的生命周期，只是会将用户最近交互过的那个活动设置为运行状态，而将多窗口模式下另外一个课件的活动设置为暂停状态。
+
+改变多窗口模式被重新创建这一默认行为，在对应的<activity> 标签中设置
+
+    android:configChanges="orientation|keyboardHidden|screenSize|screenLayout">
+    
+### 禁用多窗口模式
+
+在AndroidManifest.xml的<application>或<activity>标签中加入如下属性即可：
+
+    android:resizeableActivity=false//默认为true
+    
+注意：此属性仅在targetSdkVersion指定为24或者更高的时候才会有用。此时，设置活动不允许横竖屏切换即可禁用多窗口模式。
+
+# 十一、开发库酷欧天气
+
+## 比起使用MD，更简单实现背景图和状态栏融合的效果
+
+    if (Build.VERSION.SDK_INT >=21) {
+        View decorView = getWindow().getDecorView();
+        decorView.setSystemUiVisibility(
+            View.SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN
+            | View.SYSTEM_UI_FLAG_LAYOUT_STABLE);
+        getWindow().setStatusBarColor(Color.TRANSPARENT);
+    }
+    
+    //单独为系统状态栏预留出空间
+    android:fitsSystemWindows="true"
+    
+# 十二、应用发布
+
+## 使用Gradle生成签名apk
+
+点击右侧工具栏的Gradle->项目名->:app->Tasks->build。
+
+    //生成正式版APK文件
+    点击clean Task，再点击assembleRelease Task。
+    
+## 生成多渠道APK文件
+
+配置app下的build.gradle：
+
+    productFlavors {
+        qihoo {
+            applicationId "com.coolweather.android.qihoo"
+        }
+        baidu {
+            applicationId "com.coolweather.android.baidu"
+        }
+    }
+    
+在mian的平级目录下建立baidu目录和奇虎目录，实现各自的定制功能即可。
+
+## 对未签名的加固APK文件进行手动签名
+
+在命令行界面输入签名命令：
+
+    jarsigner -verbose -sigalg SHAlwithRSA -digestalg SHA1 -keystore [keystore文件路径] -storepass [keystore文件密码] [待签名APK路径] [keystore文件别名]
+    
+    
+# 参考资料
+
+- 《第一行代码 第2版》
