--- a/notes/第一行代码（第二版）.md
+++ b/notes/第一行代码（第二版）.md
@@ -7,7 +7,7 @@
 * [六、看看精彩的世界——使用网络技术](#六看看精彩的世界使用网络技术)
 * [七、后台默默的劳动者——探究服务](#七后台默默的劳动者探究服务)
 * [八、Android特色开发——基于位置的服务](#八android特色开发基于位置的服务)
-* [九、最佳的UI体验——MaterialDesign实战](#九最佳的UI体验material-design实战)
+* [九、最佳的UI体验——MaterialDesign实战](#九最佳的ui体验material-design实战)
 * [十、继续进阶——你还应该掌握的高级技巧](#十其它的高级技巧)
 * [十一、进入实战——开发酷欧天气](#十一开发库酷欧天气)
 * [十二、最后一步——将应用发布到360应用商店](#十二应用发布)
