--- a/notes/安全.md
+++ b/notes/安全.md
@@ -1,3 +1,3 @@
 ## 业务开发安全基础
 
-![image](http://note.youdao.com/favicon.ico)
+![image](https://github.com/JsonChao/Awesome-Android-Notebook/blob/master/screenshots/%E4%B8%9A%E5%8A%A1%E5%BC%80%E5%8F%91%E5%AE%89%E5%85%A8%E5%9F%BA%E7%A1%80.png)
